# R4.01-voting_machine

./: Cargo.toml
v010_spaghetti/: Cargo.toml
v020_configuration/src/: main.rs
v021_app_builder/: Cargo.toml
v021_app_builder/src/: app_builder.rs  main.rs
v030_domain/: Cargo.toml
v030_domain/src/: app_builder.rs  domain.rs  main.rs
v040_memory/: Cargo.toml
v040_memory/src/: app_builder.rs  domain.rs  main.rs
v040_memory/src/storage/: mod.rs
v041_file/: Cargo.toml
v041_file/src/: app_builder.rs  configuration.rs  domain.rs  lib.rs  main.rs
v041_file/src/storage/: file.rs  memory.rs  mod.rs
v050_use_cases/: Cargo.toml
v050_use_cases/src/: app_builder.rs  domain.rs  lib.rs  main.rs  use_cases.rs
v050_use_cases/src/storage/: file.rs
