[package]
name = "v040_memory"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
clap = { version = "4.4.18", features = ["derive"] }
async-trait = "0.1.77"
tokio = { version = "1.36.0" }
